# tinygame

./: .clang-format  .gitignore  CMakeLists.txt
src/: PlayerCtx.h  application.cpp  application.h  board.cpp  board.h  game_controller.cpp  game_controller.h  game_page.cpp  game_page.h  lobby.cpp  lobby.h  main.cpp  page.h  player.cpp  player.h  players.cpp  players.h  playing_area.cpp  playing_area.h  splash.cpp  splash.h  splash_screen.cpp  splash_screen.h
src/headers/: application.h  board.h
src/pages/: game_page.cpp  game_page.h  lobby.cpp  lobby.h  page.h  splash.cpp  splash.h
src/sources/: application.cpp  board.cpp  main.cpp
